update all pages

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>DeVault Wildlife Lab | UGA</title>
+<title>DeVault Wildlife Lab at UGA</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="style.css">
@@ -76,13 +76,10 @@
 			</div>
 		</div>
 		
-		<hr><!-- News section2 -->
+		<hr><!-- News section -->
 		
-		
-		
-		<div class="w3-row w3-padding-64" id="news">
-			<h1>Lab News</h1>
-			<div style="margin: 0 auto; width: 80%">
+		<div class="w3-row w3-padding-64">
+			<div style="margin: 0 auto; width: 80%"; id="news">
 				<a class="twitter-timeline" data-height="800" href="https://twitter.com/DevaultLab?ref_src=twsrc%5Etfw">Recent news</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 				</div>
 		</div>
