--- a/people.html
+++ b/people.html
@@ -53,8 +53,8 @@
 			<div class="grid-container">
 				<img src="./images/travis.jpg" class="w3-round w3-opacity-min" alt="travis" width="100%" height="auto">
 				<div>
-					<h5>Travis DeVault</h5>
-					<p style="color: grey">Principle investigator / travis at uga dot edu</p>
+					<h5>Travis DeVault, Ph.D</h5>
+					<p style="color: grey">Title / travis at uga dot edu / <a href="https://scholar.google.com/citations?user=1Ry3fI8AAAAJ&hl=en" title="Google Scholar" target="_blank">Google Scholar</a></p>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
 						labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
 						laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
@@ -74,7 +74,7 @@
 				<img src="./images/shayna.webp" class="w3-round w3-opacity-min" alt="shayna" width="100%" height="auto">
 				<div>
 					<h5>Shayna Mun&#245;z</h5>
-					<p style="color: grey">Research technician / carson at uga dot edu</p>
+					<p style="color: grey">Research technician / shayna at uga dot edu</p>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
 						labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
 						laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
