--- a/research.html
+++ b/research.html
@@ -10,7 +10,6 @@
 	body {
 		font-family: "Times New Roman", Georgia, Serif;
 	}
-
 	h1,
 	h2,
 	h3,
@@ -49,34 +48,35 @@
 	
 		<!-- Current projects -->
 		
-		<div class="w3-padding w3-padding-64" id="current projects">
-			<h1>Current projects</h1>
+		<div class="w3-padding w3-padding-64" id="current projects"><h1>Current projects</h1></div>
+		
+		<ul class="flex-container longhand">
+			<li><img src="./images/shep_alligator.jpg" style="margin-left:auto; margin-right:auto;max-height:200px"></li>
+			<li><img src="./images/shayna.webp" style="margin-left:auto; margin-right:auto;max-height:200px"></li>
+			<li><img src="./images/carson.jpg" style="margin-left:auto; margin-right:auto;max-height:200px"></li>
+		</ul>
+		<div class="w3-padding w3-padding-64" id="project 2">
+			<h3 class="w3-center">Constructed wetlands and birds</h3>
+			<p class="w3-large" style = "width:100%; column-count: 2; column-gap: 10%">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in oluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 		</div>
-		<div style ="margin-left:auto; margin-right:auto; display:flex; height:200px">
-			<img src="./images/shep_alligator.jpg" style="margin-left:auto; margin-right:auto">
-			<img src="./images/shep_spoonbill.jpg" style="margin-left:auto; margin-right:auto">
-			<img src="./images/shep_ship.jpg" style="margin-left:auto; margin-right:auto">
-		</div>
+		
+		<ul class="flex-container longhand">
+			<li><img src="./images/shep_alligator.jpg" style="margin-left:auto; margin-right:auto;max-height:200px"></li>
+			<li><img src="./images/shep_spoonbill.jpg" style="margin-left:auto; margin-right:auto;max-height:200px"></li>
+			<li><img src="./images/shep_ship.jpg" style="margin-left:auto; margin-right:auto;max-height:200px"></li>
+		</ul>
 		<div class="w3-padding w3-padding-64" id="project 1">
 			<h3 class="w3-center">Savannah Harbor Expansion Project: Cd in birds</h3>
 			<p class="w3-large" style = "width:100%; column-count: 2; column-gap: 10%">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in oluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 		</div>
 		
-		<hr>
-		
-		<div class="w3-padding w3-padding-64" id="project 2">
-			<div style ="margin-left:auto; margin-right:auto; display:flex; height:200px">
-				<img src="./images/shep_alligator.jpg" style="margin-left:auto; margin-right:auto">
-				<img src="./images/shayna.webp" style="margin-left:auto; margin-right:auto">
-				<img src="./images/carson.jpg" style="margin-left:auto; margin-right:auto">
-			</div>
-			<h3 class="w3-center">Constructed wetlands and birds</h3>
-			<p class="w3-large" style = "width:100%; column-count: 2; column-gap: 10%">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in oluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-		</div>
-		
 		<hr><!-- Past projects -->
 		
-		<div class="w3-padding w3-padding-64" id="past projects"><h1>Past projects</h1></div>
+		<div class="w3-padding w3-padding-64" id="past projects"><h1>Past projects</h1>
+		
+		<p class="w3-large"><a href="./reprints.html" title="Reprints" target = "_blank">Click here for reprints.</a></p>
+		
+		</div>
 
 		<!-- End page content -->
 
