--- a/people.html
+++ b/people.html
@@ -39,31 +39,31 @@
 										<img src="./images/mary.webp" class="w3-round w3-opacity-min" alt="mary" width="100%" height="auto">
 											<div>
 												<h5>Mary Chapman</h5>
-												<p style="color: grey">Research technician / mary at uga dot edu</p>
+												<p style="color: grey">Title / mary at uga dot edu</p>
 												<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 											</div>
 											<img src="./images/shayna.webp" class="w3-round w3-opacity-min" alt="shayna" width="100%" height="auto">
 												<div>
 													<h5>Shayna Mu&#241;oz</h5>
-													<p style="color: grey">Research technician / shayna at uga dot edu</p>
+													<p style="color: grey">Title / shayna at uga dot edu</p>
 													<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 												</div>
 												<img src="./images/carson.jpg" class="w3-round w3-opacity-min" alt="carson" width="100%" height="auto">
 													<div>
 														<h5>Carson Pakula</h5>
-														<p style="color: grey">Masters student / carson at uga dot edu</p>
+														<p style="color: grey">Title / carson at uga dot edu</p>
 														<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 													</div>
 													<img src="./images/shane.jpg" class="w3-round w3-opacity-min" alt="shane" width="100%" height="auto">
 														<div>
 															<h5>Shane Guenin</h5>
-															<p style="color: grey">Masters student / shane at uga dot edu</p>
+															<p style="color: grey">Title / shane at uga dot edu</p>
 															<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 														</div>
 														<img src="./images/jon.jpg" class="w3-round w3-opacity-min" alt="jon" width="100%" height="auto">
 															<div>
 																<h5>Jon Skaggs</h5>
-																<p style="color: grey">Project coordinator / jskaggs at uga dot edu</p>
+																<p style="color: grey">Title / jskaggs at uga dot edu</p>
 																<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in oluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 															</div>
 														</div>
