--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 								<div class="w3-right w3-hide-small">
 									<a href="people.html" class="w3-bar-item w3-button">People</a>
 									<a href="research.html" class="w3-bar-item w3-button">Research</a>
-									<a href="index.html#news" class="w3-bar-item w3-button">News</a>
 									<a href="collaborators.html" class="w3-bar-item w3-button">Collaborators</a>
 									<a href="publications.html" class="w3-bar-item w3-button">Publications</a>
 									<a href="opportunities.html" class="w3-bar-item w3-button">Contact & Opportunities</a>
@@ -58,11 +57,12 @@
 												</div>
 											</div>
 											<hr>
+		
+											
 												<!-- News section -->
 												<div class="w3-row w3-padding-64">
 													<div style="margin: 0 auto; width: 80%" id="news">
-														<a class="twitter-timeline" data-height="800" href="https://twitter.com/DevaultLab?ref_src=twsrc%5Etfw"/>
-														<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"/>
+														<a class="twitter-timeline" href="https://twitter.com/DevaultLab?ref_src=twsrc%5Etfw">Recent News from DeVault Lab</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
 													</div>
 												</div>
 											</div>
