--- a/collaborators.html
+++ b/collaborators.html
@@ -13,7 +13,6 @@
 							<div class="w3-right w3-hide-small">
 								<a href="people.html" class="w3-bar-item w3-button">People</a>
 								<a href="research.html" class="w3-bar-item w3-button">Research</a>
-								<a href="index.html#news" class="w3-bar-item w3-button">News</a>
 								<a href="collaborators.html" class="w3-bar-item w3-button">Collaborators</a>
 								<a href="publications.html" class="w3-bar-item w3-button">Publications</a>
 								<a href="opportunities.html" class="w3-bar-item w3-button">Contact & Opportunities</a>
@@ -30,8 +29,7 @@
 							</div>
 						</header>
 						<!-- Page content -->
-						<div class="w3-content">
-							<br>
+						<div class="w3-content" style="padding-top:32px">
 								<div class="w3-container w3-padding-16" style="background-color: #f1f1f1">
 									<p style="font-size:large">Our work is undoubtably improved and more fulfilling through collaboration with other research groups. You can learn more about the research programs of some of our collaborators using the links below.</p>
 								</div>
