--- a/people.html
+++ b/people.html
@@ -13,7 +13,6 @@
 							<div class="w3-right w3-hide-small">
 								<a href="people.html" class="w3-bar-item w3-button">People</a>
 								<a href="research.html" class="w3-bar-item w3-button">Research</a>
-								<a href="index.html#news" class="w3-bar-item w3-button">News</a>
 								<a href="collaborators.html" class="w3-bar-item w3-button">Collaborators</a>
 								<a href="publications.html" class="w3-bar-item w3-button">Publications</a>
 								<a href="opportunities.html" class="w3-bar-item w3-button">Contact & Opportunities</a>
@@ -35,7 +34,7 @@
 							<div class="w3-container w3-padding-64"/>
 							<div class="grid-container" style="margin-left:16px!important">
 								<div>
-									<img src="./images/travis_crop.jpg" class="w3-round" alt="travis" width="100%" height="auto">
+									<img src="./images/travis_temp.jpg" class="w3-round" alt="travis" width="100%" height="auto">
 										<img src="./images/travis_interests.jpg" class="w3-round" alt="travis" width="100%" height="auto" style="padding-top:10%"></div>
 									<div>
 										<h5>Travis DeVault, Ph.D</h5>
