--- a/opportunities.html
+++ b/opportunities.html
@@ -14,7 +14,6 @@
 								<div class="w3-right w3-hide-small">
 									<a href="people.html" class="w3-bar-item w3-button">People</a>
 									<a href="research.html" class="w3-bar-item w3-button">Research</a>
-									<a href="index.html#news" class="w3-bar-item w3-button">News</a>
 									<a href="collaborators.html" class="w3-bar-item w3-button">Collaborators</a>
 									<a href="publications.html" class="w3-bar-item w3-button">Publications</a>
 									<a href="opportunities.html" class="w3-bar-item w3-button">Contact & Opportunities</a>
@@ -35,12 +34,15 @@
 								<!-- What We Do -->
 								<div class="w3-container w3-padding-16">
 								<h3>Contact Information</h3>
+								<div style="line-height:60%">
+								<br>
 								<p>Dr. Travis DeVault</p>
 								<p>University of Georgia, Savannah River Ecology Laboratory</p>
 								<p>Regular Mail: PO Drawer E, Aiken, SC 29802</p>
 								<p>Courier: SREL, SRS Bldg 737A, Aiken, SC 29808</p>
 								<p>Office: (803) 725-5679</p>
 								<p>E-mail: devault at srel dot uga dot edu</p>
+								</div>
 								</div>
 								<div class="w3-container w3-padding-16">
 								<h3>Current Opportunities</h3>
