--- a/research.html
+++ b/research.html
@@ -14,7 +14,6 @@
 								<div class="w3-right w3-hide-small">
 									<a href="people.html" class="w3-bar-item w3-button">People</a>
 									<a href="research.html" class="w3-bar-item w3-button">Research</a>
-									<a href="index.html#news" class="w3-bar-item w3-button">News</a>
 									<a href="collaborators.html" class="w3-bar-item w3-button">Collaborators</a>
 									<a href="publications.html" class="w3-bar-item w3-button">Publications</a>
 									<a href="opportunities.html" class="w3-bar-item w3-button">Contact & Opportunities</a>
@@ -33,12 +32,13 @@
 							<!-- Page content -->
 							<div class="w3-content">
 								<!-- Current projects -->
-								<div class="w3-container w3-padding-64" id="research">
+								<div class="w3-container w3-padding-64">
 									<h3>Ecology of Animal-Vehicle Collisions</h3>
 									<div class="grid-container">
 										<div>
 											<img src="./images/about.jpg" class="w3-round" alt="travis" width="100%" height="auto">
-												<img src="./images/lightbar.jpg" class="w3-round" alt="travis" width="100%" height="auto" style="padding-top:10%"></div>
+												<img src="./images/lightbar.jpg" class="w3-round" alt="travis" width="100%" height="auto" style="padding-top:10%">
+												</div>
 											<div>
 												<p>Animal-vehicle collisions (AVCs) are ubiquitous across the developed world. AVCs cause billions of animal deaths each year and pose substantial safety threats and economic costs to people. Research on AVCs in the DeVault Lab is focused on learning why AVCs occur by investigating what goes wrong from the animal’s perspective when they are struck by vehicles. DeVault Lab members then apply that knowledge to the development of mitigation measures designed to reduce collisions.</p>
 												<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -46,20 +46,24 @@
 											</div>
 										</div>
 										<hr>
-											<h3>Avian Ecotoxicology</h3>
-											<div class="grid-container">
-												<img src="./images/shep_mistnet.jpg" class="w3-round" alt="lab" width="100%" height="auto">
-													<div>
-														<p>Our research team has multiple ongoing projects investigating the potential for heavy metal accumulation in sentinel bird species in industrial areas. Many species we monitor are migratory, and therefore may be a vector for the spread of contaminants across large distances. We use mist netting, trapping, and other methods to capture wild birds. To quantify metal content in samples collected in the field, use apply state of the art laboratory analytical techniques available at the University of Georgia Savannah River Ecology Lab.</p>
-														<p>This work allows us to explore exposure risk of wild birds to potentially toxic heavy metals within the context of their natural history and habitat use with the aim of informing wildlife management and conservation.</p>
+											<div class="w3-container w3-padding-64">
+												<h3>Avian Ecotoxicology</h3>
+												<div class="grid-container">
+													<img src="./images/shep_mistnet.jpg" class="w3-round" alt="lab" width="100%" height="auto">
+														<div>
+															<p>Our research team has multiple ongoing projects investigating the potential for heavy metal accumulation in sentinel bird species in industrial areas. Many species we monitor are migratory, and therefore may be a vector for the spread of contaminants across large distances. We use mist netting, trapping, and other methods to capture wild birds. To quantify metal content in samples collected in the field, use apply state of the art laboratory analytical techniques available at the University of Georgia Savannah River Ecology Lab.</p>
+															<p>This work allows us to explore exposure risk of wild birds to potentially toxic heavy metals within the context of their natural history and habitat use with the aim of informing wildlife management and conservation.</p>
+														</div>
 													</div>
 												</div>
 												<hr>
-													<h3>Scavenging Ecology</h3>
-													<div class="grid-container">
-														<img src="./images/lab.webp" class="w3-round w3-opacity-min" alt="lab" width="100%" height="auto">
-															<div>
-																<p>Scavenging is much more than a curiosity of animal behavior; carrion consumption is widespread and common among terrestrial vertebrates and can have substantial impacts on communities and ecosystems. Our work in this area has branched into several lines of inquiry, the most recent of which intersect with our interest in the causes and consequences of AVCs. With our collaborators, we recently investigated the magnitude of animal mortality caused by AVCs, how carcasses produced from automobile strikes influence animal communities through scavenging, and the role vultures play in providing ecosystem services by consuming biomass produced from AVCs.</p>
+													<div class="w3-container w3-padding-64">
+														<h3>Scavenging Ecology</h3>
+														<div class="grid-container">
+															<img src="./images/lab.webp" class="w3-round w3-opacity-min" alt="lab" width="100%" height="auto">
+																<div>
+																	<p>Scavenging is much more than a curiosity of animal behavior; carrion consumption is widespread and common among terrestrial vertebrates and can have substantial impacts on communities and ecosystems. Our work in this area has branched into several lines of inquiry, the most recent of which intersect with our interest in the causes and consequences of AVCs. With our collaborators, we recently investigated the magnitude of animal mortality caused by AVCs, how carcasses produced from automobile strikes influence animal communities through scavenging, and the role vultures play in providing ecosystem services by consuming biomass produced from AVCs.</p>
+																</div>
 															</div>
 														</div>
 													</div>
@@ -71,9 +75,7 @@
 													<p class="w3-small">
 														<a href="https://github.com/devaultlab/devaultlab.github.io" title="Website theme" target="_blank" class="w3-hover-text-green">Website theme</a>
 														modified from
-														<a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a>
-														.
-													</p>
+														<a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css.</a></p>
 												</footer>
 											</body>
 										</html>
