--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 													<p class="w3-large">The Savannah River Ecology Lab (SREL), a research unit of the University of Georgia, pursues basic and applied research at multiple levels of ecological organization, from atoms to ecosystems. SREL is located near Aiken, SC, on the Savannah River Site, a Department of Energy facility and the first national environmental research park. Research at SREL extends beyond the site to regional and global projects. To date, the lab has produced more than 3,000 peer-reviewed publications.</p>
 												</div>
 											</div>
+											</div>
 											<hr>
 		
 											
@@ -66,6 +67,8 @@
 													</div>
 												</div>
 											</div>
+											</div>
+											</body>
 											<!-- Footer -->
 											<footer class="w3-center w3-light-grey w3-padding-32">
 												<p class="w3-small">The content and opinions expressed on this web page do not necessarily reflect the views of nor are they endorsed by the University of Georgia or the University System of Georgia.</p>
@@ -75,5 +78,5 @@
 													<a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css.</a>
 												</p>
 											</footer>
-										</body>
+										
 									</html>
