--- a/research.html
+++ b/research.html
@@ -51,8 +51,8 @@
 												<div class="grid-container">
 													<img src="./images/shep_mistnet.jpg" class="w3-round" alt="lab" width="100%" height="auto">
 														<div>
-															<p>Our research team has multiple ongoing projects investigating the potential for heavy metal accumulation in sentinel bird species in industrial areas. Many species we monitor are migratory, and therefore may be a vector for the spread of contaminants across large distances. We use mist netting, trapping, and other methods to capture wild birds. To quantify metal content in samples collected in the field, use apply state of the art laboratory analytical techniques available at the University of Georgia Savannah River Ecology Lab.</p>
-															<p>This work allows us to explore exposure risk of wild birds to potentially toxic heavy metals within the context of their natural history and habitat use with the aim of informing wildlife management and conservation.</p>
+															<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+															<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 														</div>
 													</div>
 												</div>
