--- a/index.html
+++ b/index.html
@@ -21,8 +21,12 @@
 							</div>
 						</div>
 						<!-- Header -->
-						<header style="display:flex;align-items:center;min-height:300px">
-							<img src="./images/home.jpg" width="50%" alt="home">
+						<header style="display:flex;margin:0 auto;height:80vh">
+							<img src="./images/home.jpg" alt="home" height="100%" style="margin-left:auto;margin-right:auto">
+							<div style="position:absolute;left:25%;bottom:20%">	
+							<h1 style="color:white;opacity:1"><b>DeVAULT WILDLIFE LAB</b></h1>
+							<p class="w3-wide" style="color:white;opacity:1">at the University of Georgia Savannah River Ecology Lab</p>
+							</div>
 							</header>
 							<!-- Page content -->
 							<div class="w3-content">
