--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 							</div>
 						</div>
 						<!-- Header -->
-						<header style="display:flex;margin:0 auto;height:80vh">
-							<img src="./images/home.jpg" alt="home" height="100%" style="margin-left:auto;margin-right:auto">
-							<div style="position:absolute;left:25%;bottom:20%">	
+						<header class="w3-display-container w3-content">
+							<img class="w3-image" src="./images/home.jpg" alt="home" height="80vh">
+							<div class="w3-display-bottomleft w3-padding-large">	
 							<h1 style="color:white;opacity:1"><b>DeVAULT WILDLIFE LAB</b></h1>
-							<p class="w3-wide" style="color:white;opacity:1">at the University of Georgia Savannah River Ecology Lab</p>
+							<p class="w3-wide" style="color:white;opacity:1">at the University of Georgia-Savannah River Ecology Lab</p>
 							</div>
 							</header>
 							<!-- Page content -->
